# shoveler

./: README.md  bandit.yaml  main.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  config.py  data_transmitter.py  logger.py  utils.py
tests/: test_data_transmitter.py  test_utils.py
