[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "shoveler"
version = "0.1.0"
author = "Muhammad Yahya"
author-email = "muhammad.yahya@my-oli.com"
description = "This app facilitates real-time data transmission using RabbitMQ."

[options.extras_require]
dev = ["black", "isort", "bandit"]

[options.install_requires]
dependencies = ["pika", "requests", "python-dotenv"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
    venv
  | __pycache__
)
'''
